--- a/src/app/global-component/header/header.component.html
+++ b/src/app/global-component/header/header.component.html
@@ -1,7 +1,7 @@
 <main>
   <mat-toolbar #header class="headerStyle">
     <mat-toolbar-row>
-      <span style="margin-left: 5px; font-size: 25px">School Portal</span>
+      <span style="margin-left: 5px; font-size: 25px">University Portal</span>
       <span class="spacer"></span>
 
       <div fxLayout="row" fxLayoutAlign="center center" *ngIf="!showHam">
