--- a/src/app/global-component/header/header.component.scss
+++ b/src/app/global-component/header/header.component.scss
@@ -18,13 +18,10 @@
   font-size: 15px;
   margin: 0px 20px 0 5px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .active {
-  color: #AEC3B0;
+  color: #aec3b0;
   font-weight: bold;
 }
-
-// .styleIcon {
-//   padding-top: 10px;
-// }
