--- a/src/app/log-in/components/sign-in/sign-in.component.html
+++ b/src/app/log-in/components/sign-in/sign-in.component.html
@@ -36,6 +36,7 @@
           [(ngModel)]="user.password"
           [type]="showPassword ? 'text' : 'password'"
           required
+          autocomplete="on"
           minlength="4"
           name="password"
           matInput
