--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,21 @@
 <main>
   <app-header (active)="activeSwitch($event)"></app-header>
 
-  <router-outlet></router-outlet>
+  <div>
+    <div fxLayout>
+      <app-sidebar
+        *ngIf="loggedIn"
+        fxFlex="14"
+        class="defaultHeight"
+      ></app-sidebar>
+      <div *ngIf="!loggedIn" fxFlex="100" class="home" class="defaultHeight">
+        <router-outlet></router-outlet>
+      </div>
+      <div *ngIf="loggedIn" fxFlex="86" class="home" class="defaultHeight">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
 
   <app-footer></app-footer>
 </main>
