--- a/src/app/global-component/home/home.component.html
+++ b/src/app/global-component/home/home.component.html
@@ -1,1 +1,85 @@
-<p>Home works !</p>
+<div class="home" fxLayout="column">
+  <div fxLayout="row" class="head">
+    <img
+      [style.height]="'100px'"
+      [style.width]="'100px'"
+      src="../../../assets/user.png"
+      alt=""
+    />
+    <div fxLayout="column" fxLayoutAlign="center start">
+      <h1>Ashutosh Chauhan</h1>
+      <h4>B.tech C.S.E</h4>
+    </div>
+  </div>
+  <div class="general">
+    <div class="container">
+      <mat-card>
+        <mat-card-title>General Details</mat-card-title>
+        <mat-card-content>
+          <div class="grid">
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+            <div fxLayout>
+              <h3>Student Id :</h3>
+              <h3>ashuan03@gmail.com</h3>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
