--- a/src/app/global-component/home/home.component.html
+++ b/src/app/global-component/home/home.component.html
@@ -7,8 +7,8 @@
       alt=""
     />
     <div fxLayout="column" fxLayoutAlign="center start">
-      <h1>Ashutosh Chauhan</h1>
-      <h4>B.tech C.S.E</h4>
+      <h1>{{ studentDetails.studentName }}</h1>
+      <h4>{{ studentDetails.studentId }}</h4>
     </div>
   </div>
   <div class="general">
@@ -19,63 +19,75 @@
           <div class="grid">
             <div fxLayout>
               <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>{{ studentDetails.studentId }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>College Id :</h3>
+              <h3>{{ studentDetails.collegeId }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Email :</h3>
+              <h3>{{ studentDetails.email }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>PhoneNumber :</h3>
+              <h3>{{ studentDetails.phone }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Father Name :</h3>
+              <h3>{{ studentDetails.fatherName }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Mother Name :</h3>
+              <h3>{{ studentDetails.motherName }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Date of Birth :</h3>
+              <h3>{{ studentDetails.dob }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Course :</h3>
+              <h3>{{ studentDetails.course }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Branch :</h3>
+              <h3>{{ studentDetails.branch }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Batch :</h3>
+              <h3>{{ studentDetails.batch }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Section :</h3>
+              <h3>{{ studentDetails.section }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Roll No. :</h3>
+              <h3>{{ studentDetails.rollNo }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>Enrollment No. :</h3>
+              <h3>{{ studentDetails.enrollRollNo }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>University Roll No. :</h3>
+              <h3>{{ studentDetails.universityRollNo }}</h3>
             </div>
             <div fxLayout>
-              <h3>Student Id :</h3>
-              <h3>ashuan03@gmail.com</h3>
+              <h3>High School % :</h3>
+              <h3>{{ studentDetails.highSchoolPercentage }}</h3>
+            </div>
+            <div fxLayout>
+              <h3>Intermediate % :</h3>
+              <h3>{{ studentDetails.intermediatePercentage }}</h3>
+            </div>
+            <div fxLayout>
+              <h3>Enrollment Date :</h3>
+              <h3>{{ studentDetails.enrollmentDate }}</h3>
+            </div>
+            <div fxLayout>
+              <h3>Address :</h3>
+              <h3>{{ studentDetails.address }}</h3>
             </div>
           </div>
         </mat-card-content>
