--- a/src/app/global-component/home/home.component.html
+++ b/src/app/global-component/home/home.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="general">
     <div class="container">
-      <mat-card>
+      <mat-card style="box-shadow: 0px 0px 5px rgb(155, 151, 151)">
         <mat-card-title>General Details</mat-card-title>
         <mat-card-content>
           <div class="grid">
