--- a/src/app/global-component/sidebar/sidebar.component.html
+++ b/src/app/global-component/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
     <li [routerLink]="['/leave']" routerLinkActive="active">Leave</li>
   </ul>
   <ul *ngIf="adminStatus">
-    <li [routerLink]="['/home']" routerLinkActive="active">Home</li>
+    <li [routerLink]="['/college']" routerLinkActive="active">Home</li>
     <li [routerLink]="['/students']" routerLinkActive="active">Students</li>
     <li [routerLink]="['/teachers']" routerLinkActive="active">Teachers</li>
   </ul>
