--- a/src/app/student/components/academics/academics.component.html
+++ b/src/app/student/components/academics/academics.component.html
@@ -1,1 +1,84 @@
-<p>Academics works !</p>
+<div
+  class="academics defaultHeight"
+  fxLayout="column"
+  fxLayoutAlign="space-around none"
+>
+  <div class="attendance">
+    <h1 [style.marginLeft]="'3vw'">Attendance</h1>
+    <mat-card>
+      <div fxLayoutAlign="center center" class="graph">graph will be here</div>
+    </mat-card>
+  </div>
+  <div class="performance">
+    <h1 [style.marginLeft]="'3vw'">Performance</h1>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef>Weight</th>
+        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef>Symbol</th>
+        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <!-- <table>
+          <tbody>
+            <tr>
+              <th>No.</th>
+              <th>Subject</th>
+              <th>Marks</th>
+              <th>Total Marks</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Sample</td>
+              <td>86</td>
+              <td>100</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Sample</td>
+              <td>86</td>
+              <td>100</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Sample</td>
+              <td>86</td>
+              <td>100</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Sample</td>
+              <td>86</td>
+              <td>100</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Sample</td>
+              <td>86</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+        </table> -->
+  </div>
+  <div fxLayoutAlign="center center" fxLayoutGap="10px" class="buttons">
+    <button mat-raised-button color="primary">Download</button>
+    <button mat-raised-button color="warn">Issue</button>
+  </div>
+</div>
