--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,20 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+::-webkit-scrollbar {
+  width: 0.75em;
+  background-color: #124559;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(255, 255, 255);
+  margin-block-start: 65px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(5, 5, 5, 0.171);
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(54, 52, 52, 0.371);
+}
