--- a/src/app/student/components/home/home.component.html
+++ b/src/app/student/components/home/home.component.html
@@ -7,8 +7,8 @@
       alt=""
     />
     <div fxLayout="column" fxLayoutAlign="center start">
-      <h1>{{ studentDetails[0][1] || "Sample" }}</h1>
-      <h4>{{ studentDetails[2][1] || "Sample" }}</h4>
+      <h1>{{ name }}</h1>
+      <h4>{{ collegeId }}</h4>
     </div>
   </div>
   <div class="general">
