--- a/src/app/student/components/academics/academics.component.html
+++ b/src/app/student/components/academics/academics.component.html
@@ -6,76 +6,92 @@
   <div class="attendance">
     <h1 [style.marginLeft]="'3vw'">Attendance</h1>
     <mat-card>
-      <div fxLayoutAlign="center center" class="graph">graph will be here</div>
+      <div fxLayoutAlign="center center" class="graph">
+        <div class="container sample">
+          <div class="options vertical">
+            <span id="legendTitle">Highest Grossing Movie Franchises</span>
+            <igx-legend #legend orientation="Horizontal"></igx-legend>
+          </div>
+
+          <div class="container">
+            <igx-data-chart
+              #chart
+              isHorizontalZoomEnabled="false"
+              isVerticalZoomEnabled="false"
+              width="100%"
+              height="100%"
+              [dataSource]="data"
+              [legend]="legend"
+            >
+              <igx-numeric-x-axis title="Billions of U.S Dollars" #xAxis>
+              </igx-numeric-x-axis>
+              <igx-category-y-axis
+                label="Franchise"
+                [dataSource]="data"
+                #yAxis
+                isInverted="true"
+                gap="0.5"
+                overlap="-0.1"
+              >
+              </igx-category-y-axis>
+
+              <igx-bar-series
+                [dataSource]="data"
+                valueMemberPath="TotalWorldBoxOfficeRevenue"
+                [xAxis]="xAxis"
+                [yAxis]="yAxis"
+                title="Total Revenue of Franchise"
+                showDefaultTooltip="true"
+                isTransitionedInEnabled="true"
+                isHighlightingEnabled="true"
+              >
+              </igx-bar-series>
+
+              <igx-bar-series
+                [dataSource]="data"
+                valueMemberPath="HighestGrossingMovieInSeries"
+                [xAxis]="xAxis"
+                [yAxis]="yAxis"
+                title="Highest Grossing Movie in Series"
+                showDefaultTooltip="true"
+                isTransitionedInEnabled="true"
+                isHighlightingEnabled="true"
+              >
+              </igx-bar-series>
+            </igx-data-chart>
+          </div>
+        </div>
+      </div>
     </mat-card>
   </div>
   <div class="performance">
     <h1 [style.marginLeft]="'3vw'">Performance</h1>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-      </ng-container>
+    <div fxLayout="column" fxLayoutAlign="center center">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef>Weight</th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-      </ng-container>
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef>Weight</th>
+          <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef>Symbol</th>
-        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
-      </ng-container>
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef>Symbol</th>
+          <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <!-- <table>
-          <tbody>
-            <tr>
-              <th>No.</th>
-              <th>Subject</th>
-              <th>Marks</th>
-              <th>Total Marks</th>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>Sample</td>
-              <td>86</td>
-              <td>100</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>Sample</td>
-              <td>86</td>
-              <td>100</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>Sample</td>
-              <td>86</td>
-              <td>100</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>Sample</td>
-              <td>86</td>
-              <td>100</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>Sample</td>
-              <td>86</td>
-              <td>100</td>
-            </tr>
-          </tbody>
-        </table> -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
   </div>
   <div fxLayoutAlign="center center" fxLayoutGap="10px" class="buttons">
     <button mat-raised-button color="primary">Download</button>
