--- a/src/app/student/components/academics/academics.component.html
+++ b/src/app/student/components/academics/academics.component.html
@@ -1,71 +1,28 @@
-<div
-  class="academics defaultHeight"
-  fxLayout="column"
-  fxLayoutAlign="space-around none"
->
+<div class="academics defaultHeight">
   <div class="attendance">
-    <h1 [style.marginLeft]="'3vw'">Attendance</h1>
-    <mat-card>
-      <div fxLayoutAlign="center center" class="graph">
-        <div class="container sample">
-          <div class="options vertical">
-            <span id="legendTitle">Highest Grossing Movie Franchises</span>
-            <igx-legend #legend orientation="Horizontal"></igx-legend>
-          </div>
-
-          <div class="container">
-            <igx-data-chart
-              #chart
-              isHorizontalZoomEnabled="false"
-              isVerticalZoomEnabled="false"
-              width="100%"
-              height="100%"
-              [dataSource]="data"
-              [legend]="legend"
-            >
-              <igx-numeric-x-axis title="Billions of U.S Dollars" #xAxis>
-              </igx-numeric-x-axis>
-              <igx-category-y-axis
-                label="Franchise"
-                [dataSource]="data"
-                #yAxis
-                isInverted="true"
-                gap="0.5"
-                overlap="-0.1"
-              >
-              </igx-category-y-axis>
-
-              <igx-bar-series
-                [dataSource]="data"
-                valueMemberPath="TotalWorldBoxOfficeRevenue"
-                [xAxis]="xAxis"
-                [yAxis]="yAxis"
-                title="Total Revenue of Franchise"
-                showDefaultTooltip="true"
-                isTransitionedInEnabled="true"
-                isHighlightingEnabled="true"
-              >
-              </igx-bar-series>
-
-              <igx-bar-series
-                [dataSource]="data"
-                valueMemberPath="HighestGrossingMovieInSeries"
-                [xAxis]="xAxis"
-                [yAxis]="yAxis"
-                title="Highest Grossing Movie in Series"
-                showDefaultTooltip="true"
-                isTransitionedInEnabled="true"
-                isHighlightingEnabled="true"
-              >
-              </igx-bar-series>
-            </igx-data-chart>
-          </div>
+    <h1 [style.marginLeft]="'2vw'">Attendance</h1>
+    <div>
+      <mat-card>
+        <div class="graph">
+          <div id="chartContainer" style="height: 370px; width: 100%"></div>
         </div>
-      </div>
-    </mat-card>
+      </mat-card>
+    </div>
   </div>
   <div class="performance">
-    <h1 [style.marginLeft]="'3vw'">Performance</h1>
+    <div class="" fxLayout fxLayoutAlign="space-between center">
+      <h1 [style.marginLeft]="'2vw'">Performance</h1>
+      <mat-form-field appearance="outline">
+        <mat-select placeholder="Change Semester">
+          <mat-option
+            *ngFor="let semester of semesters"
+            [value]="semester.value"
+          >
+            {{ semester.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
     <div fxLayout="column" fxLayoutAlign="center center">
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
         <ng-container matColumnDef="position">
@@ -74,17 +31,17 @@
         </ng-container>
 
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <th mat-header-cell *matHeaderCellDef>Subject</th>
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
 
         <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef>Weight</th>
+          <th mat-header-cell *matHeaderCellDef>Marks Obtained</th>
           <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
         </ng-container>
 
         <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef>Symbol</th>
+          <th mat-header-cell *matHeaderCellDef>Total Marks</th>
           <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
         </ng-container>
 
