--- a/src/app/student/components/academics/academics.component.scss
+++ b/src/app/student/components/academics/academics.component.scss
@@ -1,12 +1,24 @@
 table {
-  width: 90%;
+  width: 95%;
   margin: 10px 0 40px 0;
 }
 
 .buttons {
-  margin: 0 0 50px;
+  padding: 50px 0;
 }
 
-.performance {
-  margin-top: 50px;
+.academics div {
+  padding-top: 5vh;
+  width: 90%;
+  margin: auto;
+}
+
+td,
+th {
+  text-align: center !important;
+  vertical-align: middle !important;
+}
+
+.mat-sort-header-container {
+  justify-content: center !important;
 }
