--- a/src/app/student/components/academics/academics.component.html
+++ b/src/app/student/components/academics/academics.component.html
@@ -11,9 +11,9 @@
   </div>
   <div class="performance">
     <div class="" fxLayout fxLayoutAlign="space-between center">
-      <h1 [style.marginLeft]="'2vw'">Performance</h1>
+      <h1>Performance</h1>
       <mat-form-field appearance="outline">
-        <mat-select placeholder="Change Semester">
+        <mat-select placeholder="Semester 1">
           <mat-option
             *ngFor="let semester of semesters"
             [value]="semester.value"
