--- a/src/app/student/components/home/home.component.html
+++ b/src/app/student/components/home/home.component.html
@@ -44,7 +44,7 @@
       <div
         class="bottom"
         fxLayout="row wrap"
-        fxLayoutAlign="space-between center"
+        fxLayoutAlign="space-around center"
         fxFlex="auto"
         [style.padding]="'50px 0'"
       >
