--- a/src/app/student/components/leave/leave.component.html
+++ b/src/app/student/components/leave/leave.component.html
@@ -1,12 +1,24 @@
 <div class="leave">
   <h1>Apply For Leave</h1>
-  <mat-stepper [linear]="true" #stepper>
+  <mat-stepper
+    [orientation]="(stepperOrientation | async)!"
+    [linear]="true"
+    #stepper
+  >
     <mat-step [stepControl]="firstFormGroup">
       <form [formGroup]="firstFormGroup">
         <ng-template matStepLabel>Reason of leave</ng-template>
         <mat-form-field appearance="fill">
           <mat-label>Enter in brief</mat-label>
           <input matInput formControlName="firstCtrl" required />
+          <mat-error
+            *ngIf="firstFormGroup.controls['firstCtrl'].errors?.['required']"
+            >Required</mat-error
+          >
+          <mat-error
+            *ngIf="firstFormGroup.controls['firstCtrl'].errors?.['minlength']"
+            >Min length is 10</mat-error
+          >
         </mat-form-field>
         <div>
           <button mat-button matStepperNext>Next</button>
@@ -21,6 +33,8 @@
             matInput
             formControlName="secondCtrlOne"
             type="date"
+            (change)="changeStartDate()"
+            min="{{ minDate }}"
             required
           />
         </mat-form-field>
@@ -29,13 +43,14 @@
           <input
             matInput
             formControlName="secondCtrlTwo"
+            min="{{ startDate.value || minDate }}"
             type="date"
             required
           />
         </mat-form-field>
         <div>
           <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
+          <button mat-button (click)="onSubmit(stepper)">Next</button>
         </div>
       </form>
     </mat-step>
