--- a/src/app/student/components/home/home.component.html
+++ b/src/app/student/components/home/home.component.html
@@ -49,6 +49,7 @@
         [style.padding]="'50px 0'"
       >
         <mat-card
+          class="hover"
           [style.margin]="'15px 0'"
           [style.width]="'225px'"
           *ngFor="let card of cards"
