--- a/src/app/student/components/leave/leave.component.scss
+++ b/src/app/student/components/leave/leave.component.scss
@@ -1,16 +1,42 @@
+p, h4 {
+  margin: 0;
+  padding: 0;
+}
+
 .leave {
   padding-top: 5vh;
   width: 90%;
   margin: auto;
 }
 
+.icon {
+  color: #3f5964;
+  cursor: pointer;
+}
+
 .example-accordion {
-  display: block;
-  max-width: 500px;
+  margin: 2.5vh 0 5vh 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 2.5px 2.5px 5px #999;
+  align-items: center;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.active {
+  color: white;
+  background-color: #3f5964d5;
+  transition: .3s;
+}
+.active_icon {
+  color: white;
+  transition: .3s;
 }
 
 .example-accordion-item {
-  display: block;
+  width: 100%;
   border: solid 1px #ccc;
 }
 
@@ -25,26 +51,18 @@
 }
 
 .example-accordion-item-description {
-  font-size: 0.85em;
+  font-size: 1  em;
   color: #999;
 }
 
-.example-accordion-item-header,
+.example-accordion-item-header {
+  padding: 15px;
+}
 .example-accordion-item-body {
-  padding: 16px;
+  padding: 20px;
 }
 
-.example-accordion-item-header:hover {
+.hover {
   cursor: pointer;
   background-color: #eee;
-}
-
-.example-accordion-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-
-.example-accordion-item:last-child {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
 }
