--- a/src/app/student/components/leave/leave.component.scss
+++ b/src/app/student/components/leave/leave.component.scss
@@ -1,4 +1,4 @@
-p, h4 {
+p, h4, mat-form-field {
   margin: 0;
   padding: 0;
 }
@@ -15,7 +15,7 @@ p, h4 {
 }
 
 .example-accordion {
-  margin: 2.5vh 0 5vh 0;
+  margin: 4vh 0 5vh 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,7 +37,7 @@ p, h4 {
 
 .example-accordion-item {
   width: 100%;
-  border: solid 1px #ccc;
+  border-bottom: solid 1px #ccc;
 }
 
 .example-accordion-item+.example-accordion-item {
@@ -65,4 +65,34 @@ p, h4 {
 .hover {
   cursor: pointer;
   background-color: #eee;
+}
+
+.spacer {
+  width: 25px;
+}
+     
+.cross {
+  font-size: 2em;
+  padding: 10px;
+  color: red;
+}
+.cover {
+  margin: 50px 0;
+  min-height: calc(100vh - 110px);
+}
+.cover .inside {
+  border: 3px solid grey;
+  border-radius: 10px;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 75%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
